--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <link rel="stylesheet" href="src/search.css">
   <link rel="stylesheet" href="src/lower-buttons.css">
   <link rel="stylesheet" href="src/sleep.css">
+  <link rel="icon" href="data;">
+  <script type="module" src="./index.js"></script>
 </head>
-  <style>
-  </style>
 <body>
   <header>
     <ul>
@@ -143,6 +143,5 @@
         <div id="question-button">Select Control+? to Go Back</div>
       </div>
   </div>
-  <script src="index.js" type="module"></script>
 </body>
 </html>
