It's the naming issue or encode issue which i've fixed ono every list

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="src/lower-buttons.css">
   <link rel="stylesheet" href="src/sleep.css">
   <link rel="icon" href="data;">
+  <link rel="shortcut icon" href="./asset/logo.png" type="image/x-icon">
 </head>
 <body>
   <header>
